--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,57 @@
-/* This file is part of Moodle - http://moodle.org/
-// 
-// Moodle is free software: you can redistribute it and/or modify
-// it under the terms of the GNU General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-// 
-// Moodle is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-// 
-// You should have received a copy of the GNU General Public License
-// along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+/** This file is part of Moodle - http://moodle.org/
+ *
+ * Moodle is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Moodle is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 */
-/* 
-    Created on : 16 janv. 2018, 16:21:36
-    Author     : formation
-*/
+
+/**
+ * Those are the custom CSS styles for the Attestoodle plug-in.
+ *
+ * @package    block_attestoodle
+ * @copyright  2017 Pole de Ressource Numerique de l'Université du Mans
+ * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
+ */
+
+/* Not displaying the milestone time (default) */
 span.tps_jalon {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    border: 1px solid black;
-    background-color: blue;
-    color: transparent;
-    cursor: pointer;
-    /*transition: all .4s ease-in-out;*/
+    display: none;
 }
-span.tps_jalon:hover {
+
+/* Displaying milestone time while editing activity description inside Moodle */
+div.editor_atto_content > span.tps_jalon {
+    display: block;
     color: red;
-    position: absolute;
-    width: auto;
-    height: 40px;
+    border: 1px solid red;
+    background: yellow;
     text-align: center;
-    background-color: yellow;
+    text-overflow: '...';
+    overflow: hidden;
+    white-space: nowrap;
+    margin-right: auto;
+    margin-top: 0.5em;
+    margin-left: auto;
+    margin-bottom: 1.5em;
+    padding: 0.5em;
+    width: 30em;
     font-weight: bold;
-    padding: 10px;
-    border-radius: 0px;
 }
-span.tps_jalon:not(:hover)::before {
-    content: "?";
-    color: white;
-    text-align: center;
-    display: inline-block;
-    width: 100%;
+div.editor_atto_content > span.tps_jalon::before {
+    content: "\023f0\0020 Jalon, valeur : ";
+    visibility: visible;
+    font-weight: normal;
 }
-span.tps_jalon:hover::before {
-    content: '/!\\ JALON ! ';
-}
-span.tps_jalon:hover::after {
-    content: ' minutes';
+div.editor_atto_content > span.tps_jalon::after {
+    content: " min. (\26a0\0020Ne pas supprimer cet encadré !)";
+    visibility: visible;
+    font-weight: normal;
 }
