--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,8 @@ p.no-validated-activity {
     *margin-left: .3em;
     font-size: 14px;
     line-height: 20px;
-    color: #333333;
-    color: #ffffff;
+    color: #333;
+    color: #fff;
     text-align: center;
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -101,7 +101,7 @@ p.no-validated-activity {
     background-color: #f5f5f5;
     background-color: #006dcc;
     *background-color: #e6e6e6;
-    *background-color: #0044cc;
+    *background-color: #04c;
     background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
     background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
@@ -131,13 +131,19 @@ p.no-validated-activity {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.btn-create:hover, .btn-create:focus,.btn-create:active,.btn-create.active,.btn-create.disabled,.btn-create[disabled] {
+.btn-create:hover,
+.btn-create:focus,
+.btn-create:active,
+.btn-create.active,
+.btn-create.disabled,
+.btn-create[disabled] {
     color: #333333;
     background-color: #e6e6e6;
     *background-color: #d9d9d9;
 }
 
-.btn-create:active, .btn-create.active {
+.btn-create:active,
+.btn-create.active {
     background-color: #cccccc \9;
 }
 
@@ -145,7 +151,8 @@ p.no-validated-activity {
     *margin-left: 0;
 }
 
-.btn-create:hover, .btn-create:focus {
+.btn-create:hover,
+.btn-create:focus {
     color: #333333;
     text-decoration: none;
     background-position: 0 -15px;
@@ -161,7 +168,8 @@ p.no-validated-activity {
     outline-offset: -2px;
 }
 
-.btn-create.active,.btn-create:active {
+.btn-create.active,
+.btn-create:active {
     background-image: none;
     outline: 0;
     -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -169,7 +177,8 @@ p.no-validated-activity {
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.btn-create.disabled,.btn-create[disabled] {
+.btn-create.disabled,
+.btn-create[disabled] {
     cursor: default;
     background-image: none;
     opacity: 0.65;
@@ -184,13 +193,19 @@ p.no-validated-activity {
     top: -1px;
 }
 
-.btn-create:hover,.btn-create:focus,.btn-create:active,.btn-create.active,.btn-create.disabled, .btn-create[disabled] {
+.btn-create:hover,
+.btn-create:focus,
+.btn-create:active,
+.btn-create.active,
+.btn-create.disabled,
+.btn-create[disabled] {
     color: #ffffff;
     background-color: #0044cc;
     *background-color: #003bb3;
 }
 
-.btn-create:active,.btn-create.active {
+.btn-create:active,
+.btn-create.active {
     background-color: #003399 \9;
 }
 
@@ -199,10 +214,12 @@ p.no-validated-activity {
     border-bottom-color: #ffffff;
 }
 
- a.btn:link, a.btn:visited {
+a.btn:link,
+a.btn:visited {
     color: #555555;
 }
 
-a.btn-create:link, a.btn-create:visited {
+a.btn-create:link,
+a.btn-create:visited {
     color: white;
 }
