--- a/styles.css
+++ b/styles.css
@@ -85,47 +85,25 @@ p.no-validated-activity {
 /* btn-create */
 .btn-create {
     display: inline-block;
-    *display: inline;
     padding: 4px 12px;
     margin-bottom: 0;
-    *margin-left: .3em;
     font-size: 14px;
     line-height: 20px;
-    color: #333;
     color: #fff;
     text-align: center;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     vertical-align: middle;
     cursor: pointer;
-    background-color: #f5f5f5;
     background-color: #006dcc;
-    *background-color: #e6e6e6;
-    *background-color: #04c;
-    background-image: -moz-linear-gradient(top, #fff, #e6e6e6);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e6e6e6));
-    background-image: -webkit-linear-gradient(top, #fff, #e6e6e6);
-    background-image: -o-linear-gradient(top, #fff, #e6e6e6);
-    background-image: linear-gradient(to bottom, #fff, #e6e6e6);
-    background-image: -moz-linear-gradient(top, #08c, #04c);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
-    background-image: -webkit-linear-gradient(top, #08c, #04c);
-    background-image: -o-linear-gradient(top, #08c, #04c);
     background-image: linear-gradient(to bottom, #08c, #04c);
     background-repeat: repeat-x;
     border: 1px solid #ccc;
-    *border: 0;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: #04c #04c #002a80;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     border-bottom-color: #b3b3b3;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    *zoom: 1;
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -139,7 +117,6 @@ p.no-validated-activity {
 .btn-create[disabled] {
     color: #333;
     background-color: #e6e6e6;
-    *background-color: #d9d9d9;
 }
 
 .btn-create:active,
@@ -147,23 +124,18 @@ p.no-validated-activity {
     background-color: #ccc;
 }
 
-.btn-create:first-child {
-    *margin-left: 0;
-}
-
 .btn-create:hover,
 .btn-create:focus {
     color: #333;
     text-decoration: none;
     background-position: 0 -15px;
-    -webkit-transition: background-position 0.1s linear;
-    -moz-transition: background-position 0.1s linear;
-    -o-transition: background-position 0.1s linear;
-    transition: background-position 0.1s linear;
+    -webkit-transition: background-position 0.11s linear;
+    -moz-transition: background-position 0.11s linear;
+    -o-transition: background-position 0.11s linear;
+    transition: background-position 0.11s linear;
 }
 
 .btn-create:focus {
-    outline: thin dotted #333;
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
 }
@@ -201,7 +173,6 @@ p.no-validated-activity {
 .btn-create[disabled] {
     color: #fff;
     background-color: #04c;
-    *background-color: #003bb3;
 }
 
 .btn-create:active,
