--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
 /** This file is part of Moodle - http://moodle.org/
- *
- * Moodle is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Moodle is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+*
+* Moodle is free software: you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation, either version 3 of the License, or
+* (at your option) any later version.
+*
+* Moodle is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 /**
- * Those are the custom CSS styles for the Attestoodle plug-in.
- *
- * @package    tool_attestoodle
- * @copyright  2018 Pole de Ressource Numerique de l'Université du Mans
- * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
- */
+* Those are the custom CSS styles for the Attestoodle plug-in.
+*
+* @package    tool_attestoodle
+* @copyright  2018 Pole de Ressource Numerique de l'Université du Mans
+* @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
+*/
 
 /* Not displaying the milestone time (default) */
 span.tps_jalon {
@@ -193,4 +193,20 @@ a.btn:visited {
 a.btn-create:link,
 a.btn-create:visited {
     color: white;
+}
+
+/* Progressbar certifcate generated */
+.attestoodle-progressbar-generation {
+    display: block;
+    width: 100%;
+    height: 2em;
+    margin: .5em 0;
+    border: 3px solid white;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    box-shadow: 0 0 0 3px #b6b6b6;
+    -moz-box-shadow: 0 0 0 3px #b6b6b6;
+    -webkit-box-shadow: 0 0 0 3px #b6b6b6;
+    background-color: #d4d4d4;
 }
