Optimisation, redefinition formation
optimisation des branches formations + suivi évolution cours / formation
Attention : nouvelle définition de table milestone doit être au minimum en version : 2019030110

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,15 @@ div.editor_atto_content > span.tps_jalon::after {
     padding: 1rem;
     background-color: #ececec;
 }
+.training-management-error {
+    padding: 1rem;
+    background-color: #ff9020;
+}
 
+.training-management-notif {
+    padding: 1rem;
+    background-color: #90ff20;
+}
 .training-report-header,
 .learner-detail-header {
     margin-bottom: 1rem;
